--- a/css/main.css
+++ b/css/main.css
@@ -172,21 +172,98 @@ input:focus::placeholder {
 
 /* 바로가기 */
 
-.other-site{
+.other-site {
   width: 100%;
-  max-width:  1000px;
-  min-width: 350px;
+  max-width: 1000px;
+  min-width: 250px;
 }
-ul{
-  width: 100%;
+.other-site li{
+  position: relative;
+}
+ul {
+  margin: auto;
+  max-width: 100%;
+  min-width: 70%;
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
-.roundBox{
+.roundBox {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: #ddd;
+  position: relative;
 }
+.roundBox img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  background: none;
+}
+#pigma{
+  width: 70%;
+}
+#notion,
+#pinterest,
+#git{
+  width: 100%;
+}
+#chat{
+  width: 150%;
+}
+
+/* 바로가기 추가버튼 */
+
+#plus{
+  background-color: #cee2ff;
+  position: relative;
+}
+#plus span{
+  color: #123b88;
+  font-size: 30px;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.other-site a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 14.5px;
+  width: 110px;
+  height: 110px;
+  justify-content: space-evenly;
+  transition: all 0.3s;
+}
+
+/* 더보기 */
+
+.more{
+  position: absolute;
+  top: 0;
+  right: 0;
+  opacity: 0;
+  transition: all 0.3s;
+}
+.more img{
+  display: block;
+  padding: 5px;
+}
+
+/* 바로가기 호버 */
+
+.other-site a:hover{
+  background-color: #efefef;
+  border-radius: 5px;
+}
+.other-site li:hover .more{
+  opacity: 1;
+}
+.more:hover{
+  cursor: pointer;
+}
+
